# terraria-calamity-guide

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  loadout_data.json  package-lock.json  package.json
src/: commands.rs  data.rs  issue.rs  loadout_data.rs  main.rs  playthrough_data.rs  route.rs  web.rs
src/commands/: db.rs  edit_loadout.rs  help.rs  loadout.rs  mod.rs  ping.rs  playthrough.rs  report.rs  send_rules.rs  update_loadout.rs  view_item.rs  view_loadout.rs  wiki.rs
src/web/: route.rs
static/: loadout_data.json  schema.sql
static/public/: index.html  script.js  style.css
static/public/loadout/: index.html  script.js  style.css
