[package]
name = "terraria-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "0.5.5", features = ["cache"] }
rocket = { version = "=0.5.0-rc.3" }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
convert_case = "0.6.0"
shuttle-poise = "0.27.0"
shuttle-rocket = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-secrets = "0.27.0"
shuttle-shared-db = { version = "0.27.0", features = ["postgres"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "chrono"] }
tracing = "0.1.37"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
reqwest = "0.11.20"
scraper = "0.17.1"
num-traits = "0.2"
num-derive = "0.4"
rand = "0.8.5"

[dependencies.serenity]
default-features = false
features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "http",
  "model",
  "utils",
  "rustls_backend",
  "cache"
]
version = "0.11"
