[package]
name = "terraria-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { version = "0.6.1", features = ["cache"] }
axum = "0.7.8"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
convert_case = "0.6.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "chrono"] }
tracing = "0.1.37"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
reqwest = "0.11.20"
scraper = "0.17.1"
num-traits = "0.2"
num-derive = "0.4"
rand = "0.8.5"
multimap = "0.10.0"
thiserror = "1.0.58"
tower-http = { version = "0.6.2", features = ["fs"] }
futures = "0.3.31"

